--- a/app/index.html
+++ b/app/index.html
@@ -25,21 +25,24 @@
 			<h1>Page Title</h1>
 			<h6>This is a subtitle which has a small font.</h6>
 			<span class="panelistic_placeholder"></span>
-			<input type="text" value="This is an input">
-			<input type="button" value="Button"><br>
-			<span class="panelistic_placeholder"></span>
-			<select>
-				<option>Dropbox Selection 1</option>
-				<option>Dropbox Selection 2</option>
-				<option>Dropbox Selection 3</option>
-				<option>Dropbox Selection 4</option>
-			</select>
-			<span class="panelistic_placeholder"></span>
-			<div class="panelistic_checkbox"><input type="checkbox"><span class="panelistic_checkbox_text">Checkbox Text</span></div>
-			<span class="panelistic_placeholder"></span>
-			<img src="src/img/example.jpg">
-			<span class="panelistic_placeholder"></span>
-			<div class="panelistic_code"><code>This is an example of the code area<br>12345<br>67890</code></div>
+			<div class="panelistic_panel">
+				<input type="text" value="This is an input">
+				<input type="button" value="Button"><br>
+				<span class="panelistic_placeholder"></span>
+				<select>
+					<option>Dropbox 1</option>
+					<option>Dropbox 2</option>
+					<option>Dropbox 3</option>
+					<option>Dropbox 4</option>
+				</select>
+				<span class="panelistic_placeholder"></span>
+				<div class="panelistic_checkbox"><input type="checkbox"><span class="panelistic_checkbox_text">Checkbox Text</span></div>
+			</div>
+			<div class="panelistic_panel">
+				<img src="src/img/example.jpg">
+				<span class="panelistic_placeholder"></span>
+				<div class="panelistic_code"><code>This is an example of the code area<br>12345<br>67890</code></div>
+			</div>
 		</div>
 	</div>
 </body>
