--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,8 @@
 				</select>
 				<span class="panelistic_placeholder"></span>
 				<div class="panelistic_checkbox"><input type="checkbox"><span class="panelistic_checkbox_text">Checkbox Text</span></div>
+				<span class="panelistic_placeholder"></span>
+				<textarea>Textarea test</textarea>
 			</div>
 			<div class="panelistic_panel">
 				<img src="src/img/example.jpg">
